tests/paczka1/small_fuzzy/34078035.err
Error in line 4: A272 S16< 27,<
Error in line 9: 3Sh6YiPW2x S169 21,9
Error in line 13: Av7v Av7v 33,v
